# sorepy

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
sorepy/: __init__.py  app.py
sorepy/static/: styles.css
sorepy/templates/: index.html  input.html
